# nrgljubljana-old

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.Mac  TODO  aclocal.m4  config.h.in  configure  configure.ac  initial.m  initialparse.m  models.m  nrginit.m.m4  nrginit.sh  nrgrun.sh  reconf
m4/: Makefile.am  Makefile.in  ax_boost_mpi.m4  ax_boost_serialization.m4  gsl.m4
scripts/: CLEANUPDATA  Makefile.am  Makefile.in  annotated.plot  annotated.rescale  checkdone  custparam  deriv  derivate  derivate_power  diffcalc  diffcalcSQ  err  errs  evenoddavg  ffindroot  findrootlin  foldx  gathertd_nosrt  gaussian  getxi_log  intdiff  makecust  makecustdir  mean_witherror  mirror  mma2dat  movingaverage2  omegan  phi  relative_error  runner  scaleall  scaleby  scalebyfirst  shiftby  smearSTM  specunpack  splitbyvalue  stripcomments  (+8 more)
src/: Makefile.am  Makefile.in  diag.h  dmnrg.h  matrix.cc  nrg.cc  nrg.h  numerics.h  param.cc  portabil.h  spec_CFS.cc  spec_FDM.cc  splitting.cc  sym-NONE.cc  sym-U1.cc  symmetry.cc  tridiag.h
tools/: Makefile.am  Makefile.in
tools/adapt/: Makefile.am  Makefile.in  README  adapt.cc  nrgchain.cc
tools/broaden/: Makefile.am  Makefile.in  binavg.cc  broaden.cc  common.cc  specmoments.cc
tools/bw/: Makefile.am  Makefile.in  bw.cc
tools/dec/: Makefile.am  Makefile.in  README  diag.cc  matrix.cc  unitary.cc
tools/hilb/: Makefile.am  Makefile.in
tools/intavg/: Makefile.am  Makefile.in  intavg.cc
tools/integrate/: Makefile.am  Makefile.in  integ.cc
tools/kk-GSL/: Makefile.am  Makefile.in  kk.cc
tools/mats/: Makefile.am  Makefile.in  mats.cc
tools/resample/: Makefile.am  Makefile.in  resample.cc
tools/tdavg/: Makefile.am  Makefile.in  tdavg.cc
