# Makefile.am for scripts
# Rok Zitko, rok.zitko@ijs.si, March 2009

dist_bin_SCRIPTS = CLEANUPDATA abs aligncolumns average.pl \
averagefiles block checkdone column column1 column2 columns custparam \
delete_NRG_output derivate diffcalc diffcalcSQ divybyx evenoddavg every \
extractcolumn extractcolumns \
ffindroot gather gathertd gaussian getiter getparam getNz getxi \
integrate integrateabs integrateneg integratepos joincolumns keeplastcomment \
keeponecomment looper makecust makecustdir mapcol mean mma2dat moment1 \
moment2 moment3 moment4 moments movingaverage2 normalize omegan periodic phi \
report restrict runner scaleall scaleby scalebyfirst scalex scaley shiftby \
sortnum specunpack stripcomments substtd subtract subtracty sumy \
swapfirstlast tk tkeps tkkondo variance wilsonxi xmpl \
findrootlin gatherE intdiff mean_witherror newiter odesolvasymif1 \
odesolvasymif1ch2 totalE valueatlin \
integrateab symmetrize derivate_power getxi_log clipy err errs deriv divy \
columnavg columnavg_comment \
interpolate mirror gathertd_nosrt relative_error \
lastblock scalexy annotated.plot annotated.rescale splitbyvalue \
gettotalenergy smearSTM foldx multy multiplybyfirst \
gatherlastlines gathercustom_nosrt shiftx shifty

